Försökte fixa vissa contrast fel

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
     --tea-green: #cdeac0ff;
     --rose-pompadour: #e27396ff;
-    --dark-rose: rgb(192, 79, 114);
+    --dark-rose: rgb(190, 59, 100);
+    --header-rose: rgb(229, 86, 131);
     --amaranth-pink: #ea9ab2ff;
     --mimi-pink: #efcfe3ff;
     --dark-slate-gray: #254441ff;
@@ -151,7 +152,7 @@
 }
 
 .list_2 li a:hover {
-  color: var(--amaranth-pink);
+  color: var(--header-rose);
   background-color: white;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -190,6 +191,7 @@
 .color2 {
   background-color: var(--mimi-pink);
 }
+
 .color3 {
   background-color: var(--dark-slate-gray);
 }
@@ -293,15 +295,15 @@
 }
 h1 {
   font-size: var(--step-4);
-  color: var(--rose-pompadour);
+  color: var(--header-rose);
 }
 h2 {
   font-size: var(--step-3);
-  color: var(--rose-pompadour);
+  color: var(--header-rose);
 }
 h3 {
   font-size: var(--step-2);
-  color: var(--rose-pompadour);
+  color: var(--header-rose);
 }
 h4 {
   font-size: var(--step-1);
@@ -312,11 +314,6 @@ p {
   color: var(--dark-rose);
   margin-top: 1rem;
   font-size: var(--step-0);
-}
-.text_pink {
-  font-family: Arial, Helvetica, sans-serif;
-  color: var(--rose-pompadour);
-  margin-top: 1rem;
 }
 
 
